--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
-									<a href="https://drkeefy.github.io/drkeefy.html">Home</a>
+									<a href="index.html">Home</a>
 									<a href="#about">About Me</a>
 									<a href="#gallery">Gallery</a>
 									<a href="#music">Music</a>
 									<a href="https://drkeefy.github.io/blog/home.html">Blog</a>
-									<a href="#contact">Contact</a>							
+									<a href="mailto:drkeefy@disroot.org">Contact</a>							
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
