--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- Site Title -->
 		<title>Photography</title>
 
@@ -354,9 +355,9 @@
 								<p><i class="fa fa-map-marker fa-fwß"></i> Houston, TX</p>
 								<p><i class="fa fa-phone fa-fw"></i> Phone: (832) 779-7197 </p>
 								<p><i class="fa fa-envelope fa-fw "> </i> Email: hello@keefy.live</p>
-								<p><i class="fa fa-pallete fa-fw"></i><a href="https://fiverr.com/drkeefy">Hire Me!</a></p>
-								<p><i class="fa fa-pallete fa-fw"></i><a href="https://patreon.com/drkeefy/shop/">Buy something from me!</a></p>
-								<p><i class="fa fa-pallete fa-fw"></i><a href="#">Sign Up for my Newsletter!</a></p>
+								<p><i class="fa fa-cc-discover"></i><a href="https://fiverr.com/drkeefy">Hire Me!</a></p>
+								<p><i class="fa fa-paypal"></i><a href="https://patreon.com/drkeefy/shop/">Buy something from me!</a></p>
+								<p><i class="fa fa-save"></i><a href="https://loonybin.ck.page/cbea1be3a7">Sign Up for my Newsletter!</a></p>
 							</div>
 							
 						</div>						
