--- a/index.html
+++ b/index.html
@@ -354,10 +354,11 @@
 								I'd love to get in contact if you're needing of a <b>photographer, videographer, artist or collaboration</b><br>
 								<p><i class="fa fa-map-marker fa-fwß"></i> Houston, TX</p>
 								<p><i class="fa fa-phone fa-fw"></i> Phone: (832) 779-7197 </p>
-								<p><i class="fa fa-envelope fa-fw "> </i> Email: hello@keefy.live</p>
-								<p><i class="fa fa-cc-discover"></i><a href="https://fiverr.com/drkeefy">Hire Me!</a></p>
-								<p><i class="fa fa-paypal"></i><a href="https://patreon.com/drkeefy/shop/">Buy something from me!</a></p>
-								<p><i class="fa fa-save"></i><a href="https://loonybin.ck.page/cbea1be3a7">Sign Up for my Newsletter!</a></p>
+								<p><i class="fa fa-envelope fa-fw "> </i>    Email: hello@keefy.live</p>
+								<p><i class="fa fa-cc-discover"></i><a href="https://fiverr.com/drkeefy">  Hire Me!</a></p>
+								<p><i class="fa fa-paypal"></i><a href="https://patreon.com/drkeefy/shop/">    Buy something from me!</a></p>
+								<p><i class="fa fa-save"></i><a href="https://loonybin.ck.page/cbea1be3a7">  Sign Up for my Newsletter!</a></p>
+								<button style="background-color:blue; color: white; padding-top: 10px; padding-bottom: 10px; padding-left: 10px; padding-right: 10px;"><i class="fa fa-download"> </i>     Download my Resume (SOON)</button>
 							</div>
 							
 						</div>						
