--- a/index.html
+++ b/index.html
@@ -275,86 +275,18 @@
 			<!-- End callto Area -->
 
 			<!-- Start blog Area -->
-						<!-- Start blog Area -->
-						<section class="blog-area pb-100" id="blog">
-							<div class="container">
-								<div class="row justify-content-center">
-									<div class="col-md-8 pb-30 header-text">
-										<h1>Our Recent Blogs</h1>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore  et dolore magna aliqua.
-										</p>
-									</div>
-								</div>
-								<div class="row">	
-									<div class="single-blog col-lg-4 col-md-4">
-			
-										<img class="f-img img-fluid mx-auto" src="img/b1.jpg" alt="">
-										<h4>
-											<a href="#">Portable Fashion for young women</a>
-										</h4>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exea.
-											 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-										</p>
-										<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-											<div>
-												<img class="img-fluid" src="img/user.png" alt="">
-												<a href="#"><span>Mark Wiens</span></a>
-											</div>
-											<div class="meta">
-												13th Dec
-												<span class="lnr lnr-heart"></span> 15
-												<span class="lnr lnr-bubble"></span> 04
-											</div>
-										</div>
-									</div>
-									<div class="single-blog col-lg-4 col-md-4">
-										<img class="f-img img-fluid mx-auto" src="img/b2.jpg" alt="">
-										<h4>
-											<a href="#">Summer ware are coming</a>
-										</h4>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip exea.
-											 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-										</p>
-										<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-											<div>
-												<img class="img-fluid" src="img/user.png" alt="">
-												<a href="#"><span>Mark Wiens</span></a>
-											</div>
-											<div class="meta">
-												13th Dec
-												<span class="lnr lnr-heart"></span> 15
-												<span class="lnr lnr-bubble"></span> 04
-											</div>
-										</div>
-									</div>
-									<div class="single-blog col-lg-4 col-md-4">
-										<img class="f-img img-fluid mx-auto" src="img/b3.jpg" alt="">
-										<h4>
-											<a href="#">Summer ware are coming</a>
-										</h4>
-										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
-										</p>
-										<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-											<div>
-												<img class="img-fluid" src="img/user.png" alt="">
-												<a href="#"><span>Mark Wiens</span></a>
-											</div>
-											<div class="meta">
-												13th Dec
-												<span class="lnr lnr-heart"></span> 15
-												<span class="lnr lnr-bubble"></span> 04
-											</div>
-										</div>
-									</div>												
-								</div>
-							</div>	
-						</section>
-						<!-- end blog Area -->	
-			
+			<section class="blog-area section-gap" id="blog">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-md-8 pb-30 header-text">
+							<h1>My Blog</h1>
+							<p>
+							<iframe src="https://www.twitch.tv/popout/drkeefy/extensions/bz51rcic0mvfketk89s3jrsuc1c0sb/panel" title="description"></iframe>
+						</p>
+						</div>
+					</div>
+				</div>	
+			</section>
 			<!-- end blog Area -->	
 		
 <!--Livestream Section-->
