--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-8 pb-30 header-text">
-							<h1>My Blog</h1>
+							<h1>What I'm up to Next...!</h1>
 							<p>
 							<iframe src="https://www.twitch.tv/popout/drkeefy/extensions/bz51rcic0mvfketk89s3jrsuc1c0sb/panel" title="description"></iframe>
 						</p>
