--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 						<div class="col-md-8 pb-30 header-text">
 							<h1>What I'm up to Next...!</h1>
 							<p>
-							<iframe src="https://www.twitch.tv/popout/drkeefy/extensions/bz51rcic0mvfketk89s3jrsuc1c0sb/panel" title="description"></iframe>
+							<iframe src="https://www.guilded.gg/mothership/groups/MDqMQOBD/channels/1792a3db-c143-4bfe-9c58-37f237730ec0/calendar" title="description"></iframe>
 						</p>
 						</div>
 					</div>
