--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 						<div class="col-md-8 pb-30 header-text">
 							<h1>What I'm up to Next...!</h1>
 							<p>
-							<iframe src="https://www.guilded.gg/mothership/groups/MDqMQOBD/channels/1792a3db-c143-4bfe-9c58-37f237730ec0/calendar" title="description"></iframe>
+								<iframe src="https://cryptpad.disroot.org/kanban/#/2/kanban/view/gaDle+avmDOkXk+mwFKERM8zrIb2zN1egegyZ8fsc0c/embed/"></iframe>
 						</p>
 						</div>
 					</div>
